Change HTML file check from sentinel-drive-app.html to index.html

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Verify HTML file
         run: |
-          test -f sentinel-drive-app.html
+          test -f index.html
 
       - name: Prepare site folder
         run: |
